# ffmpeg-2

./: .gitignore  CMakeLists.txt  main.cpp  simplest_ffmpeg_video_encoder.cpp
audio/: CMakeLists.txt  simplest_audio_play_sdl2.cpp  simplest_ffmpeg_audio_player.cpp
examples/: CMakeLists.txt  avio_reading.c  decode_audio.c  demuxing_decoding.c  encode_video.c
learning_sdl/: CMakeLists.txt  main.cpp  opencv_stream.cpp
output/: CMakeLists.txt  image_streamer.cpp  mac_streamer.cpp
simple_test/: CMakeLists.txt  main.cpp  mat_streamer.cpp  simplest_ffmpeg_player.cpp  simplest_ffmpeg_receiver.cpp  simplest_ffmpeg_streamer.cpp  simplest_mediadata_h264.cpp  simplest_video_play_sdl2.cpp
