add_executable(streamer simplest_ffmpeg_streamer.cpp)
target_link_libraries(streamer PRIVATE ffmpeg)
add_executable(receiver simplest_ffmpeg_receiver.cpp)
target_link_libraries(receiver PRIVATE ffmpeg)
add_executable(player simplest_ffmpeg_player.cpp)
target_link_libraries(player PRIVATE ffmpeg)
add_executable(mat_player mat_streamer.cpp)
target_link_libraries(mat_player PRIVATE ffmpeg)
add_executable(highlighte simplest_mediadata_h264.cpp)